2006-11-06  Fabio Marzocca  <thesaltydog@gmail.com>

	* C/figures/baobab_fullscan.png:
	* C/figures/baobab_prefs.png:
	* C/figures/baobab_remote.png:
	* C/figures/baobab_window.png:

	Updated figures

2006-10-08  Christophe Bliard <christophe.bliard@trux.info>

	* fr/fr.po: Added initial French translation.
	* fr/figures: Added directory + translated figures.
	* Makefile.am: Added fr to DOC_LINGUAS.

2006-10-03  Daniel Nylander <po@danielnylander.se>

	* sv/sv.po: Updated Swedish translation.
	* sv/figures/*png: Updated screenshots.

2006-09-09  Fabio Marzocca  <thesaltydog@gmail.com>

	* C/figures/baobab_fullscan.png:
	* C/figures/baobab_prefs.png:
	* C/figures/baobab_remote.png:
	* C/figures/baobab_window.png:

	Updated figures

2006-08-27  Fabio Marzocca  <thesaltydog@gmail.com>

	* .cvsignore: fixed

2006-08-20  Daniel Nylander <po@danielnylander.se>

	* sv/sv.po: Added initial Swedish translation.
	* sv/figures: Added directory.
	* Makefile.am: Added sv to DOC_LINGUAS

2006-05-03  Fabio Marzocca  <thesaltydog@gmail.com>

	* C/baobab.xml:
	* C/figures/baobab_fullscan.png:
	* C/figures/baobab_remote.png:

	Drafting Usage section

2006-04-27  Fabio Marzocca  <thesaltydog@gmail.com>

	* C/baobab.xml:
	* C/figures/baobab_prefs.png:

	Still drafting the help file

2006-04-26  Fabio Marzocca  <thesaltydog@gmail.com>

	* C/baobab.xml:
	* C/figures/baobab_treemaps.png:
	* C/figures/baobab_window.png:
	
	More editing on help file

2006-04-25  Fabio Marzocca  <thesaltydog@gmail.com>

	* C/baobab.xml: editing help file

2006-04-23  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* ChangeLog:
	* Makefile.am:
	* baobab.omf.in:
	* C/baobab.xml:
	* C/legal.xml: Intial stub for baobab's documentation.