@@ -1,5 +1,11 @@
 2006-11-06  Fabio Marzocca  <thesaltydog@gmail.com>
 
+	* C/baobab.xml:
+
+	Updated help file
+
+2006-11-06  Fabio Marzocca  <thesaltydog@gmail.com>
+
 	* C/figures/baobab_fullscan.png:
 	* C/figures/baobab_prefs.png:
 	* C/figures/baobab_remote.png:
